// QONECTIQ.proto
//
// Auto-generated by ApodiniGRPC, at 2022-02-02 00:15:10+01:00



syntax = "proto3";

package QONECTIQ;


import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


service QONECTIQ {
  // APODINI-identifier: addReviewToEvent
  // APODINI-handlerName: AddReviewHandler
  rpc AddReviewHandler(.QONECTIQ.AddReviewHandler___Input) returns (.QONECTIQ.Review);
  // APODINI-identifier: createCategory
  // APODINI-handlerName: CreateCategoryHandler
  rpc CreateCategoryHandler(.QONECTIQ.EventCategory) returns (.google.protobuf.Empty);
  // APODINI-identifier: createEvent
  // APODINI-handlerName: CreateEventHandler
  rpc CreateEventHandler(.QONECTIQ.Event) returns (.google.protobuf.Empty);
  // APODINI-identifier: register
  // APODINI-handlerName: UserRegisterFormHandler
  rpc CreateUserRegisterFormHandler(.QONECTIQ.UserRegisterForm) returns (.QONECTIQ.User);
  // APODINI-identifier: deleteEventWithID
  // APODINI-handlerName: DeleteEventHandler
  rpc DeleteEventHandler(.QONECTIQ.DeleteEventHandler___Input) returns (.QONECTIQ.Event);
  // APODINI-identifier: deleteUserWithID
  // APODINI-handlerName: DeleteUserHandler
  rpc DeleteUserHandler(.QONECTIQ.DeleteUserHandler___Input) returns (.google.protobuf.Empty);
  // APODINI-identifier: getAllUsers
  // APODINI-handlerName: GetAllUsersHandler
  rpc GetAllUsersHandler(.google.protobuf.Empty) returns (.QONECTIQ.GetAllUsersHandler___Response);
  // APODINI-identifier: getAllCategories
  // APODINI-handlerName: GetCategoriesHandler
  rpc GetCategoriesHandler(.google.protobuf.Empty) returns (.QONECTIQ.GetCategoriesHandler___Response);
  // APODINI-identifier: getEventsOfCategory
  // APODINI-handlerName: CategoryEventsHandler
  rpc GetCategoryEventsHandler(.QONECTIQ.CategoryEventsHandler___Input) returns (.QONECTIQ.CategoryEventsHandler___Response);
  // APODINI-identifier: getCategoryWithID
  // APODINI-handlerName: GetCategoryHandler
  rpc GetCategoryHandler(.QONECTIQ.GetCategoryHandler___Input) returns (.QONECTIQ.EventCategory);
  // APODINI-identifier: getEventWithID
  // APODINI-handlerName: GetEventHandler
  rpc GetEventHandler(.QONECTIQ.GetEventHandler___Input) returns (.QONECTIQ.Event);
  // APODINI-identifier: getAllEvents
  // APODINI-handlerName: GetEventsHandler
  rpc GetEventsHandler(.google.protobuf.Empty) returns (.QONECTIQ.GetEventsHandler___Response);
  // APODINI-identifier: usersOfExperience
  // APODINI-handlerName: ExperienceUsersHandler
  rpc GetExperienceUsersHandler(.QONECTIQ.ExperienceUsersHandler___Input) returns (.QONECTIQ.ExperienceUsersHandler___Response);
  // APODINI-identifier: getCategoriesOfGroup
  // APODINI-handlerName: GroupCategoriesHandler
  rpc GetGroupCategoriesHandler(.QONECTIQ.GroupCategoriesHandler___Input) returns (.QONECTIQ.GroupCategoriesHandler___Response);
  // APODINI-identifier: getHomeFeedForUserWithID
  // APODINI-handlerName: HomeFeedHandler
  rpc GetHomeFeedHandler(.QONECTIQ.HomeFeedHandler___Input) returns (.QONECTIQ.HomeFeed);
  // APODINI-identifier: getParticipantsOfEventWithID
  // APODINI-handlerName: GetParticipantsOfEventHandler
  rpc GetParticipantsOfEventHandler(.QONECTIQ.GetParticipantsOfEventHandler___Input) returns (.QONECTIQ.GetParticipantsOfEventHandler___Response);
  // APODINI-identifier: getReviewsOfEventWithID
  // APODINI-handlerName: ReviewsHandler
  rpc GetReviewsHandler(.QONECTIQ.ReviewsHandler___Input) returns (.QONECTIQ.ReviewsHandler___Response);
  // APODINI-identifier: getUserWithID
  // APODINI-handlerName: GetUserHandler
  rpc GetUserHandler(.QONECTIQ.GetUserHandler___Input) returns (.QONECTIQ.User);
  // APODINI-identifier: login
  // APODINI-handlerName: UserLoginHandler
  rpc GetUserLoginHandler(.QONECTIQ.UserLogin) returns (.QONECTIQ.User);
  // APODINI-identifier: updateEventWithID
  // APODINI-handlerName: UpdateEventHandler
  rpc UpdateEventHandler(.QONECTIQ.UpdateEventHandler___Input) returns (.QONECTIQ.Event);
}


message AddReviewHandler___Input {
  .QONECTIQ.ReviewForm review = 1;
  string eventID = 2;
  string userID = 3;
}


message CategoryEventsHandler___Input {
  .QONECTIQ.EventCategoryGroup group = 1;
}


message CategoryEventsHandler___Response {
  repeated .QONECTIQ.Event value = 1 [packed = false];
}


message DeleteEventHandler___Input {
  string id = 1;
}


message DeleteUserHandler___Input {
  string userID = 1;
}


message Event {
  string id = 1;
  string title = 2;
  string summary = 3;
  repeated .QONECTIQ.Review reviews = 4 [packed = false];
  .google.protobuf.Timestamp date = 5;
  uint64 duration = 6;
  string imagePath = 7;
  uint64 maxParticipants = 8;
  string organizer = 9;
  repeated string tags = 10 [packed = false];
  .QONECTIQ.EventCategory category = 11;
}


message EventCategory {
  string id = 1;
  string title = 2;
  .QONECTIQ.EventCategoryGroup group = 3;
  .QONECTIQ.CategoryStatus status = 4;
}


message EventMediator {
  .google.protobuf.Timestamp date = 1;
  uint64 duration = 2;
  uint64 maxParticipants = 3;
}


message ExperienceUsersHandler___Input {
  .QONECTIQ.Experience experience = 1;
}


message ExperienceUsersHandler___Response {
  repeated .QONECTIQ.User value = 1 [packed = false];
}


message GetAllUsersHandler___Response {
  repeated .QONECTIQ.User value = 1 [packed = false];
}


message GetCategoriesHandler___Response {
  repeated .QONECTIQ.EventCategory value = 1 [packed = false];
}


message GetCategoryHandler___Input {
  string id = 1;
}


message GetEventHandler___Input {
  string id = 1;
}


message GetEventsHandler___Response {
  repeated .QONECTIQ.Event value = 1 [packed = false];
}


message GetParticipantsOfEventHandler___Input {
  string eventID = 1;
}


message GetParticipantsOfEventHandler___Response {
  repeated .QONECTIQ.User value = 1 [packed = false];
}


message GetUserHandler___Input {
  string userID = 1;
}


message GroupCategoriesHandler___Input {
  .QONECTIQ.EventCategoryGroup groupCategory = 1;
}


message GroupCategoriesHandler___Response {
  repeated .QONECTIQ.EventCategory value = 1 [packed = false];
}


message HomeFeed {
  string id = 1;
  string userID = 2;
  string greeting = 3;
  string subtitle = 4;
  string searchBarText = 5;
  repeated .QONECTIQ.HomeFeedEvent events = 6 [packed = false];
  repeated .QONECTIQ.HomeFeedCategory categories = 7 [packed = false];
}


message HomeFeedCategory {
  string categoryID = 1;
  string title = 2;
  string imageURL = 3;
  uint64 eventsCount = 4;
}


message HomeFeedEvent {
  string eventID = 1;
  string title = 2;
  string subtitle = 3;
  string imageURL = 4;
  uint64 eventsCount = 5;
}


message HomeFeedHandler___Input {
  string userID = 1;
}


message Review {
  string id = 1;
  string title = 2;
  string content = 3;
  string eventID = 4;
  string reviewerID = 5;
  string summary = 6;
  .QONECTIQ.Rating rating = 7;
}


message ReviewForm {
  string title = 1;
  string content = 2;
  string summary = 3;
  .QONECTIQ.Rating rating = 4;
}


message ReviewsHandler___Input {
  string eventID = 1;
}


message ReviewsHandler___Response {
  repeated .QONECTIQ.Review value = 1 [packed = false];
}


message UpdateEventHandler___Input {
  .QONECTIQ.EventMediator eventMediator = 1;
  string eventID = 2;
}


message User {
  string id = 1;
  string name = 2;
  string surname = 3;
  string password = 4;
  string email = 5;
  .google.protobuf.Timestamp birthday = 6;
  bool subscribedToNewsLetter = 7;
  .QONECTIQ.Experience experience = 8;
  repeated .QONECTIQ.Review reviews = 9 [packed = false];
  repeated .QONECTIQ.Event ownEvents = 10 [packed = false];
  repeated .QONECTIQ.Event participatingEvents = 11 [packed = false];
  repeated .QONECTIQ.Event eventsOfInterest = 12 [packed = false];
  .QONECTIQ.HomeFeed homeFeed = 13;
}


message UserLogin {
  string userName = 1;
  string password = 2;
}


message UserRegisterForm {
  string name = 1;
  string surname = 2;
  string password = 3;
  .google.protobuf.Timestamp birthday = 4;
  string email = 5;
  bool subscribedToNewsLetter = 6;
}


enum CategoryStatus {
  available = 0;
  unavailable = 1;
}


enum EventCategoryGroup {
  marketing = 0;
  blogging = 1;
  coding = 2;
  cooking = 3;
  dating = 4;
  travellinng = 5;
  studying = 6;
  science = 7;
}


enum Experience {
  beginner = 0;
  expert = 1;
}


enum Rating {
  outstanding = 0;
  exceedsExpectation = 1;
  meetsExpectation = 2;
  needsImprovement = 3;
  unacceptable = 4;
  undefined = 5;
}

