// QONECTIQ2.proto
//
// Auto-generated by ApodiniGRPC, at 2022-04-13 16:39:31+02:00



syntax = "proto3";

package QONECTIQ2;


import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


service QONECTIQ {
  // APODINI-identifier: addReviewToEvent
  // APODINI-handlerName: QONECTIQV2.AddReviewHandler
  rpc AddReviewHandler(.QONECTIQ2.AddReviewHandlerInput) returns (.QONECTIQ2.ReviewForm);
  // APODINI-identifier: getEventsOfCategory
  // APODINI-handlerName: QONECTIQV2.CategoryEventsHandler
  rpc CreateCategoryEventsHandler(.QONECTIQ2.CategoryEventsHandlerInput) returns (.QONECTIQ2.CategoryEventsHandlerResponse);
  // APODINI-identifier: createCategory
  // APODINI-handlerName: QONECTIQV2.CreateCategoryHandler
  rpc CreateCategoryHandler(.QONECTIQ2.EventCategoryMediator) returns (.google.protobuf.Empty);
  // APODINI-identifier: createEvent
  // APODINI-handlerName: QONECTIQV2.CreateEventHandler
  rpc CreateEventHandler(.QONECTIQ2.Event) returns (.google.protobuf.Empty);
  // APODINI-identifier: register
  // APODINI-handlerName: QONECTIQV2.UserRegisterFormHandler
  rpc CreateUserRegisterFormHandler(.QONECTIQ2.UserRegisterForm) returns (.QONECTIQ2.User);
  // APODINI-identifier: deleteEventWithID
  // APODINI-handlerName: QONECTIQV2.DeleteEventHandler
  rpc DeleteEventHandler(.QONECTIQ2.DeleteEventHandlerInput) returns (.QONECTIQ2.Event);
  // APODINI-identifier: deleteUserWithID
  // APODINI-handlerName: QONECTIQV2.DeleteUserHandler
  rpc DeleteUserHandler(.QONECTIQ2.DeleteUserHandlerInput) returns (.google.protobuf.Empty);
  // APODINI-identifier: getAllUsers
  // APODINI-handlerName: QONECTIQV2.GetAllUsersHandler
  rpc GetAllUsersHandler(.google.protobuf.Empty) returns (.QONECTIQ2.GetAllUsersHandlerResponse);
  // APODINI-identifier: getAllCategories
  // APODINI-handlerName: QONECTIQV2.GetCategoriesHandler
  rpc GetCategoriesHandler(.google.protobuf.Empty) returns (.QONECTIQ2.GetCategoriesHandlerResponse);
  // APODINI-identifier: getCategoryWithID
  // APODINI-handlerName: QONECTIQV2.GetCategoryHandler
  rpc GetCategoryHandler(.QONECTIQ2.GetCategoryHandlerInput) returns (.QONECTIQ2.EventCategory);
  // APODINI-identifier: getEventWithID
  // APODINI-handlerName: QONECTIQV2.GetEventHandler
  rpc GetEventHandler(.QONECTIQ2.GetEventHandlerInput) returns (.QONECTIQ2.Event);
  // APODINI-identifier: getAllEvents
  // APODINI-handlerName: QONECTIQV2.GetEventsHandler
  rpc GetEventsHandler(.google.protobuf.Empty) returns (.QONECTIQ2.GetEventsHandlerResponse);
  // APODINI-identifier: getCategoriesOfGroup
  // APODINI-handlerName: QONECTIQV2.GroupCategoriesHandler
  rpc GetGroupCategoriesHandler(.QONECTIQ2.GroupCategoriesHandlerInput) returns (.QONECTIQ2.GroupCategoriesHandlerResponse);
  // APODINI-identifier: getHomeFeedForUserWithID
  // APODINI-handlerName: QONECTIQV2.HomeFeedHandler
  rpc GetHomeFeedHandler(.QONECTIQ2.HomeFeedHandlerInput) returns (.QONECTIQ2.HomeFeed);
  // APODINI-identifier: getParticipantsOfEventWithID
  // APODINI-handlerName: QONECTIQV2.GetParticipantsOfEventHandler
  rpc GetParticipantsOfEventHandler(.QONECTIQ2.GetParticipantsOfEventHandlerInput) returns (.QONECTIQ2.GetParticipantsOfEventHandlerResponse);
  // APODINI-identifier: getReviewsOfEventWithID
  // APODINI-handlerName: QONECTIQV2.ReviewsHandler
  rpc GetReviewsHandler(.QONECTIQ2.ReviewsHandlerInput) returns (.QONECTIQ2.ReviewsHandlerResponse);
  // APODINI-identifier: reviewsOfUserWithID
  // APODINI-handlerName: QONECTIQV2.ReviewsOfUserHandler
  rpc GetReviewsOfUserHandler(.QONECTIQ2.ReviewsOfUserHandlerInput) returns (.QONECTIQ2.ReviewsOfUserHandlerResponse);
  // APODINI-identifier: searchEventsWithQuery
  // APODINI-handlerName: QONECTIQV2.SearchEventsHandler
  rpc GetSearchEventsHandler(.QONECTIQ2.SearchEventsHandlerInput) returns (.QONECTIQ2.SearchEventsHandlerResponse);
  // APODINI-identifier: statisticsOfUser
  // APODINI-handlerName: QONECTIQV2.StatisticsHandler
  rpc GetStatisticsHandler(.QONECTIQ2.StatisticsHandlerInput) returns (.QONECTIQ2.UserStatistic);
  // APODINI-identifier: getUserWithID
  // APODINI-handlerName: QONECTIQV2.GetUserHandler
  rpc GetUserHandler(.QONECTIQ2.GetUserHandlerInput) returns (.QONECTIQ2.User);
  // APODINI-identifier: login
  // APODINI-handlerName: QONECTIQV2.UserLoginHandler
  rpc GetUserLoginHandler(.QONECTIQ2.UserLogin) returns (.QONECTIQ2.User);
  // APODINI-identifier: updateEventWithID
  // APODINI-handlerName: QONECTIQV2.UpdateEventHandler
  rpc UpdateEventHandler(.QONECTIQ2.UpdateEventHandlerInput) returns (.QONECTIQ2.Event);
}


message AddReviewHandlerInput {
  .QONECTIQ2.ReviewForm review = 1;
  string eventID = 2;
  string userID = 3;
  bool displayName = 4;
}


message CategoryEventsHandlerInput {
  .QONECTIQ2.EventCategoryGroup group = 1;
}


message CategoryEventsHandlerResponse {
  repeated .QONECTIQ2.Event value = 1 [packed = false];
}


message DeleteEventHandlerInput {
  string identifier = 1;
}


message DeleteUserHandlerInput {
  string userID = 1;
}


message Event {
  string id = 1;
  string title = 2;
  string summary = 3;
  repeated .QONECTIQ2.Review reviews = 4 [packed = false];
  .google.protobuf.Timestamp date = 5;
  uint64 duration = 6;
  string imagePath = 7;
  uint64 maxParticipants = 8;
  string organizer = 9;
  repeated string tags = 10 [packed = false];
  string location = 11;
  .QONECTIQ2.EventCategory category = 12;
}


message EventCategory {
  string id = 1;
  string title = 2;
  .QONECTIQ2.EventCategoryGroup group = 3;
}


message EventCategoryMediator {
  string title = 1;
  .QONECTIQ2.EventCategoryGroup categoryGroup = 2;
}


message EventMediator {
  .google.protobuf.Timestamp date = 1;
  uint64 duration = 2;
  uint64 maxParticipants = 3;
}


message GetAllUsersHandlerResponse {
  repeated .QONECTIQ2.User value = 1 [packed = false];
}


message GetCategoriesHandlerResponse {
  repeated .QONECTIQ2.EventCategory value = 1 [packed = false];
}


message GetCategoryHandlerInput {
  string id = 1;
}


message GetEventHandlerInput {
  string id = 1;
}


message GetEventsHandlerResponse {
  repeated .QONECTIQ2.Event value = 1 [packed = false];
}


message GetParticipantsOfEventHandlerInput {
  string eventIdentifier = 1;
}


message GetParticipantsOfEventHandlerResponse {
  repeated .QONECTIQ2.User value = 1 [packed = false];
}


message GetUserHandlerInput {
  string userID = 1;
}


message GroupCategoriesHandlerInput {
  .QONECTIQ2.EventCategoryGroup group = 1;
}


message GroupCategoriesHandlerResponse {
  repeated .QONECTIQ2.EventCategory value = 1 [packed = false];
}


message HomeFeed {
  string id = 1;
  string userID = 2;
  string greeting = 3;
  string subtitle = 4;
  string searchBarText = 5;
  repeated .QONECTIQ2.HomeFeedEvent events = 6 [packed = false];
  repeated .QONECTIQ2.HomeFeedCategory categories = 7 [packed = false];
  .QONECTIQ2.HomeFeedTheme theme = 8;
}


message HomeFeedCategory {
  string categoryID = 1;
  string title = 2;
  string imageURL = 3;
  uint64 eventsAmount = 4;
}


message HomeFeedEvent {
  string eventID = 1;
  string title = 2;
  string secondaryTitle = 3;
  string imageURL = 4;
  uint64 eventsCount = 5;
}


message HomeFeedHandlerInput {
  string userID = 1;
  bool showPreviousEvents = 2;
}


message Review {
  string id = 1;
  string title = 2;
  string content = 3;
  string eventID = 4;
  string reviewerID = 5;
  string summary = 6;
  .QONECTIQ2.Rating rating = 7;
  bool displayReviewerName = 8;
}


message ReviewForm {
  string title = 1;
  string content = 2;
  string summary = 3;
  .QONECTIQ2.Rating rating = 4;
}


message ReviewsHandlerInput {
  string eventID = 1;
  .QONECTIQ2.Rating ratingBetterThan = 2;
}


message ReviewsHandlerResponse {
  repeated .QONECTIQ2.Review value = 1 [packed = false];
}


message ReviewsOfUserHandlerInput {
  string userId = 1;
}


message ReviewsOfUserHandlerResponse {
  repeated .QONECTIQ2.Review value = 1 [packed = false];
}


message SearchEventsHandlerInput {
  string searchQuery = 1;
}


message SearchEventsHandlerResponse {
  repeated .QONECTIQ2.Event value = 1 [packed = false];
}


message StatisticsHandlerInput {
  string userIdentifier = 1;
}


message UpdateEventHandlerInput {
  .QONECTIQ2.EventMediator eventMediator = 1;
  string eventID = 2;
}


message User {
  string id = 1;
  string name = 2;
  string surname = 3;
  string password = 4;
  string email = 5;
  .google.protobuf.Timestamp birthday = 6;
  bool subscribedToNewsLetter = 7;
  .QONECTIQ2.Experience experience = 8;
  repeated .QONECTIQ2.Review reviews = 9 [packed = false];
  repeated .QONECTIQ2.Event myEvents = 10 [packed = false];
  repeated .QONECTIQ2.Event participatingEvents = 11 [packed = false];
  repeated .QONECTIQ2.Event interestedIn = 12 [packed = false];
  .QONECTIQ2.HomeFeed homeFeed = 13;
}


message UserLogin {
  string username = 1;
  string password = 2;
}


message UserRegisterForm {
  string name = 1;
  string lastname = 2;
  string password = 3;
  .google.protobuf.Timestamp birthday = 4;
  string email = 5;
  bool subscribedToNewsLetter = 6;
  .QONECTIQ2.HomeFeedTheme preferredTheme = 7;
}


message UserStatistic {
  string userID = 1;
  uint64 participatingEventsCount = 2;
  uint64 createdEventsCount = 3;
  .QONECTIQ2.EventCategory topCategory = 4;
  .google.protobuf.Timestamp registeredSince = 5;
  .QONECTIQ2.UserBadge badge = 6;
}


enum EventCategoryGroup {
  marketing = 0;
  blogging = 1;
  coding = 2;
  cooking = 3;
  dating = 4;
  travel = 5;
  science = 6;
  entertainment = 7;
}


enum Experience {
  beginner = 0;
  expert = 1;
  unclassified = 2;
}


enum HomeFeedTheme {
  basic = 0;
  classic = 1;
  dark = 2;
  midnight = 3;
  sunset = 4;
}


enum Rating {
  outstanding = 0;
  exceedsExpectation = 1;
  meetsExpectation = 2;
  needsImprovement = 3;
  terrible = 4;
}


enum UserBadge {
  newbie = 0;
  explorer = 1;
  achiever = 2;
  worldSaver = 3;
}

